<resources>
    <string name="app_name">CocktailMachine</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>

    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="cocktail_img_content_description">Cocktail image</string>
    <string name="update_cocktail_btn">Update</string>
    <string name="quantity">quantity</string>
    <string name="new_cocktail">New cocktail</string>
    <string name="volume_cl">cl</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="add_cocktail">Add cocktail</string>
    <string name="add_ingredient">+ Add ingredient</string>
    <string name="delete_ingredient">Delete ingredient</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="add_image">Add image</string>

    <!-- Strings used for Toast -->
    <string name="cocktail_added">Cocktail added !</string>
    <string name="check_inserted_value">Please, check inserted value</string>
    <string name="fill_all_fields">Fill all fields before adding new one</string>

    <!-- Strings used for different user input handling -->
    <string name="search_cocktail">Search Cocktail</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <!-- Error strings -->
    <string name="cocktail_name_required">Cocktail name required</string>

</resources>